--- a/style.css
+++ b/style.css
@@ -1,2 +1,42 @@
+:root{
+    --Nutmeg: hsl(14, 45%, 36%);
+    --Dark-Raspberry: hsl(332, 51%, 32%);
+    --White: hsl(0, 0%, 100%);
+    --Rose-White: hsl(330, 100%, 98%);
+    --Eggshell: hsl(30, 54%, 90%);
+    --Light-Grey: hsl(30, 18%, 87%);
+    --Wenge-Brown: hsl(30, 10%, 34%);
+    --Dark-Charcoal: hsl(24, 5%, 18%);
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: var(--Eggshell);
+}
+h1{
+    color: var(--Dark-Charcoal);
+    font-family: "Young Serif", sans-serif;
+    font-size: 3    rem;
+
+}
+h2{
+    font-family: "Young Serif", sans-serif;
+}
+img{
+    width: 100%;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
 .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+.attribution a { color: hsl(228, 100%, 50%); }
+
+.containter{
+    border-radius: 20px;
+    background-color: var(--White);
+    padding: 50px;
+    font-family: "Outfit";
+    max-width: 800px;
+    margin: 100px auto;
+}
